k8s/1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
   app: jenkins
   user: abatura

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
        user: abatura
    spec:      
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
          name: jenkins
        - containerPort: 50000
          name: jnlp-port
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-home

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-lb  
  labels:
    name: jenkins-lb  
  namespace: jenkins 
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
  selector:
    app: jenkins

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: jenkins
  name: jenkins-ingress  
spec:
  backend:
    serviceName: jenkins-lb
    servicePort: 80
  rules:
  - host: k8s.abatura.playpit.net
    http:
      paths:
      - backend:
          serviceName: jenkins-lb
          servicePort: 80
        path: /
status:
  loadBalancer: {}

---
  kind: Service
  apiVersion: v1
  metadata:
    name: jenkins-discovery
    namespace: jenkins
  spec:
    selector:
      app: jenkins
    ports:
      - protocol: TCP
        port: 50000
        targetPort: 50000
        name: slaves
