k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins.cluster.mbazhok.playpit.net
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-svc
          servicePort: 80
